Fixes hr style in bootstraptheme which is invisible (large vertical space) otherwise [#893]

--- a/themes/bootstraptheme/less/bootstraptheme.less
+++ b/themes/bootstraptheme/less/bootstraptheme.less
@@ -133,8 +133,8 @@ a.icon-sort, .container-chrome ul li a.icon-sort {
     content: normal;
 }
 
-.eql-tablelist hr {
-  color: black;
-  background-color: black;
-  height: 4px;
+hr {
+  color: #696969;
+  background-color: #696969;
+  height: 3px;
 }
